readd deploy to azure pr with updated build
